# adventofcode

./: README.md
2022/: README.md
2022/01/: solution.py
2022/02/: solution.cpp
2022/03/: Solution.hs
2022/04/: a.out  solution.c
2022/05/: Cargo.toml
2022/06/: solution.ml
2022/08/: solution.java
2022/09/: .gitignore  solution.kt
2022/10/: Program.cs
2022/11/: go.mod  solution.go
2022/12/: solution.js
2022/13/: package-lock.json  package.json  solution.js  solution.ts
2022/14/: solution.php
2022/15/: package-lock.json  package.json  solution.coffee
2022/16/: spago.dhall
2022/18/: 18.fsproj  Program.fs
2022/19/: solution.groovy
2022/20/: Package.swift  README.md
2022/21/: README.md  input.hs  input.pl  input2.pl
2022/22/: solution.jl
2022/23/: .gitignore  solution.adb
2022/24/: solution.rb
2022/25/: solution.beam  solution.erl
2023/: .gitignore  Cargo.toml
2023/src/: dbg.rs  exs.rs  generic.rs  main.rs  old.rs  t10.rs  t11.rs  t12.rs  t13.rs  t14.rs  t15.rs  t16.rs  t17.rs  t18.rs  t19.rs  t20.rs  t21.rs  t22.rs  t23.rs  t24.rs  t25.rs  t4.rs  t5.rs  t6.rs  t7.rs  t8.rs  t9.rs
2024/: Cargo.toml
2024/src/: dbg.rs  exs.rs  generic.rs  main.rs  prelude.rs  t01.rs  t02.rs  t03.rs  t04.rs  t05.rs  t06.rs  t07.rs  t08.rs  t09.rs  t10.rs  t11.rs  t12.rs  t13.rs  t14.rs  t15.rs  t16.rs  t17.rs  t18.rs  t19.rs  t20.rs  t21.rs  t22.rs  t23.rs  t24.rs  t25.rs  tmplt.rs
2025/: .gitignore  Cargo.toml
2025/src/: exs.rs  generic.rs  main.rs  prelude.rs  t01.rs  t02.rs  t03.rs  t04.rs  t05.rs  t06.rs  t07.rs  (+8 more)
aoc_common/: Cargo.toml
(+9 files in other folders)
