[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_common = { path = "../aoc_common" }
anyhow = "1.0.75"
colored = "2.0.4"
itertools = "0.12.0"
num = "0.4.1"
divisors = "0.2.1"